deployments-EKS/deployment-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: eks-udacity-app
  labels:
    app: eks-udacity-app
spec:
  replicas: 500
  selector:
    matchLabels:
      app: eks-udacity-app
  template:
    metadata:
      labels:
        app: eks-udacity-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      
      containers:
      - name: fe
        image: public.ecr.aws/nginx/nginx:1.21
        resources:
          requests:
            cpu: 500m
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
