deployments-EKS/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
  name: huannguyen7651.info
spec:
  ingressClassName: nginx
  rules:
  - host: huannguyen7651.info
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 3000
        path: /
        pathType: Prefix
